--- a/build.xml
+++ b/build.xml
@@ -37,13 +37,13 @@
     </target>
 
     <target name="compat2" description="checks compatibility with PHP_CompatInfo 2">
-        <exec command="C:\xampp\php\phpcompatinfo --configuration phpcompatinfo.xml print --exclude polyglott ."
+        <exec command="C:\xampp\php\phpcompatinfo --configuration phpcompatinfo.xml print --exclude boilerplate ."
               logoutput="true"/>
     </target>
 
-    <target name="compat" description="checks compatibility with PHP_CompatInfo 3">
+    <!--<target name="compat" description="checks compatibility with PHP_CompatInfo 3">
         <exec command="phpcompatinfo analyser:run ." logoutput="true"/>
-    </target>
+    </target>-->
 
     <target name="unit-tests" description="runs all unit tests">
         <phpunit haltonerror="true" haltonfailure="true">
