--- a/build.xml
+++ b/build.xml
@@ -32,14 +32,9 @@
         </phpcodesniffer>
     </target>
 
-    <target name="compat2" description="checks compatibility with PHP_CompatInfo 2">
-        <exec command="C:\xampp\php\phpcompatinfo --configuration phpcompatinfo.xml print --exclude boilerplate ."
-              logoutput="true"/>
-    </target>
-
-    <!--<target name="compat" description="checks compatibility with PHP_CompatInfo 3">
+    <target name="compat" description="checks compatibility with PHP_CompatInfo">
         <exec command="phpcompatinfo analyser:run ." logoutput="true"/>
-    </target>-->
+    </target>
 
     <target name="unit-tests" description="runs all unit tests">
         <phpunit haltonerror="true" haltonfailure="true">
@@ -113,7 +108,7 @@
                 <exclude name="build.xml"/>
                 <exclude name="composer.*"/>
                 <exclude name="coverage.xml"/>
-                <exclude name="phpcompatinfo.*"/>
+                <exclude name="phpcompatinfo.json"/>
                 <exclude name="tests/**"/>
                 <exclude name="TODO"/>
             </fileset>
