removed non-existant JS documentation from developer documentation

--- a/build.xml
+++ b/build.xml
@@ -59,8 +59,8 @@
         <exec command="phpunit --configuration coverage.xml" logoutput="true"/>
     </target>
 
-    <target name="php-doc">
-        <phpdoc title="Boilerplate_XH Developer Documentation" destdir="doc/php"
+    <target name="doc" description="generates the developer documentation">
+        <phpdoc title="Boilerplate_XH Developer Documentation" destdir="doc"
                 output="HTML:Smarty:HandS" defaultpackagename="Boilerplate"
                 defaultcategoryname="CMSimple_XH" parseprivate="true">
             <fileset refid="php-sources"/>
@@ -70,18 +70,6 @@
             </projdocfileset>
         </phpdoc>
     </target>
-
-    <target name="js-doc">
-        <apply executable="jsdoc" parallel="true" checkreturn="true">
-            <arg value="-d"/>
-            <arg value="doc/js"/>
-            <arg value="-p"/>
-            <fileset refid="js-sources"/>
-        </apply>
-    </target>
-
-    <target name="doc" depends="php-doc,js-doc"
-            description="generates the developer documentation"/>
 
     <target name="build" description="builds a distributable ZIP archive">
         <fail unless="version" message="version is not defined!"/>
