--- a/build.xml
+++ b/build.xml
@@ -73,7 +73,9 @@
 
     <target name="build" description="builds a distributable ZIP archive">
         <fail unless="version" message="version is not defined!"/>
-        <svnexport revision="" repositoryurl="." todir="export"/>
+        <exec command="git archive -o export.tar HEAD" checkreturn="true"/>
+        <untar file="export.tar" todir="export"/>
+        <delete file="export.tar"/>
         <move todir="dist">
             <fileset dir="export">
                 <include name="index.php"/>
@@ -85,14 +87,8 @@
                 </replacetokens>
             </filterchain>
         </move>
-        <!--<jsMin targetDir="dist" suffix="" failOnError="false">
-            <fileset dir="export">
-                <include name="ocal.js"/>
-            </fileset>
-        </jsMin>-->
         <move todir="dist">
             <fileset dir="export">
-                <exclude name="boilerplate.komodoproject"/>
                 <exclude name="build.xml"/>
                 <exclude name="composer.*"/>
                 <exclude name="coverage.xml"/>
