--- a/build.xml
+++ b/build.xml
@@ -25,7 +25,7 @@
     </target>
 
     <target name="sniff" description="checks adherence to PEAR CS">
-        <phpcodesniffer standard="PEAR" format="full">
+        <phpcodesniffer standard="PSR2" format="full">
             <fileset refid="php-sources"/>
             <fileset refid="unit-tests"/>
             <fileset refid="attack-tests"/>
