--- a/build.xml
+++ b/build.xml
@@ -86,7 +86,7 @@
             </fileset>
         </move>
         <delete dir="export"/>
-        <copy file="dist/config/config.php" tofile="dist/config/defaultconfig.php"/>
+        <!-- <copy file="dist/config/config.php" tofile="dist/config/defaultconfig.php"/> -->
         <copy file="dist/languages/en.php" tofile="dist/languages/default.php"/>
         <zip destfile="Boilerplate_XH-${version}.zip" basedir="dist" prefix="boilerplate/"/>
         <delete dir="dist"/>
