Convert help file sources to markdown
This makes it easier to edit the pages, gives us nice README.mds for
Github, and we still can automatically generate XHTML automatically.

--- a/build.xml
+++ b/build.xml
@@ -60,6 +60,31 @@
         <exec command="phpunit --configuration coverage.xml" logoutput="true"/>
     </target>
 
+    <target name="gen-help" description="builds help.htm from README.md">
+        <exec executable="pandoc" passthru="true" checkreturn="true">
+            <arg value="-s"/>
+            <arg value="--eol=lf"/>
+            <arg value="--template=help/template.htm"/>
+            <arg value="-Vlang=en"/>
+            <arg line="-Vpagetitle=&quot;User Manual&quot;"/>
+            <arg value="-o"/>
+            <arg file="help/help.htm"/>
+            <arg file="README.md"/>
+            <arg line="-t html"/>
+        </exec>
+        <exec executable="pandoc" passthru="true" checkreturn="true">
+            <arg value="-s"/>
+            <arg value="--eol=lf"/>
+            <arg value="--template=help/template.htm"/>
+            <arg value="-Vlang=de"/>
+            <arg line="-Vpagetitle=&quot;Benutzerhandbuch&quot;"/>
+            <arg value="-o"/>
+            <arg file="help/help_de.htm"/>
+            <arg file="README_DE.md"/>
+            <arg line="-t html"/>
+        </exec>
+    </target>
+
     <target name="build" description="builds a distributable ZIP archive">
         <fail unless="version" message="version is not defined!"/>
         <exec command="git archive -o export.zip HEAD" checkreturn="true"/>
@@ -81,7 +106,9 @@
                 <exclude name="build.xml"/>
                 <exclude name="composer.*"/>
                 <exclude name="coverage.xml"/>
+                <exclude name="help/template.htm"/>
                 <exclude name="phpcompatinfo.json"/>
+                <exclude name="README*.md"/>
                 <exclude name="tests/**"/>
             </fileset>
         </move>
