--- a/build.xml
+++ b/build.xml
@@ -2,18 +2,8 @@
 
 <project name="Boilerplate" default="help">
 
-    <fileset id="php-sources" dir=".">
-        <include name="*.php"/>
-        <include name="classes/*.php"/>
-        <include name="views/*.php"/>
-    </fileset>
-
     <fileset id="js-sources" dir=".">
         <include name="*.js"/>
-    </fileset>
-
-    <fileset id="unit-tests" dir="tests/unit">
-        <include name="*Test.php"/>
     </fileset>
 
     <fileset id="attack-tests" dir="tests/attack">
@@ -21,25 +11,28 @@
     </fileset>
 
     <target name="help" description="lists available targets">
-        <exec command="phing -l" outputProperty="help"/>
+        <exec executable="phing" outputProperty="help">
+            <arg value="-l"/>
+        </exec>
         <echo>${help}</echo>
     </target>
 
-    <target name="sniff" description="checks adherence to PSR2">
-        <phpcodesniffer standard="PSR2" format="full">
-            <fileset refid="php-sources"/>
-            <fileset refid="unit-tests"/>
-            <fileset refid="attack-tests"/>
-        </phpcodesniffer>
+    <target name="sniff" description="checks adherence to coding standard">
+        <exec executable="phpcs" passthru="true" checkreturn="true">
+            <arg value="--standard=PSR2"/>
+            <arg line="--runtime-set ignore_warnings_on_exit true"/>
+            <arg file="admin.php"/>
+            <arg file="index.php"/>
+            <arg file="classes"/>
+        </exec>
     </target>
 
     <target name="unit-tests" description="runs all unit tests">
-        <phpunit bootstrap="tests/unit/bootstrap.php" haltonerror="true" haltonfailure="true">
-            <formatter type="plain" usefile="false"/>
-            <batchtest>
-                <fileset refid="unit-tests"/>
-            </batchtest>
-        </phpunit>
+        <exec executable="phpunit" passthru="true" checkreturn="true">
+            <arg value="--bootstrap"/>
+            <arg file="tests/unit/bootstrap.php"/>
+            <arg file="tests/unit"/>
+        </exec>
     </target>
 
     <target name="attack-tests" description="runs all attack tests">
@@ -83,7 +76,9 @@
 
     <target name="build" description="builds a distributable ZIP archive">
         <fail unless="version" message="version is not defined!"/>
-        <exec command="git archive -o export.zip HEAD" checkreturn="true"/>
+        <exec executable="git" checkreturn="true">
+            <arg line="archive -o export.zip HEAD"/>
+        </exec>
         <unzip file="export.zip" todir="export"/>
         <delete file="export.zip"/>
         <move todir="dist">
