--- a/build.xml
+++ b/build.xml
@@ -46,7 +46,9 @@
     </target>
 
     <target name="coverage" description="generates coverage report">
-        <exec command="phpunit --configuration coverage.xml" logoutput="true"/>
+        <exec executable="phpunit" passthru="true" checkreturn="true">
+            <arg line="--configuration coverage.xml"/>
+        </exec>
     </target>
 
     <target name="gen-help" description="builds help.htm from README.md">
