--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           path: cmsimplexh/plugins/boilerplate
       - name: phive install
-        run: cd cmsimplexh/plugins/boilerplate && phive --no-progress install --trust-gpg-keys A978220305CD5C32,D5F0CB76E2DD74F8
+        run: cd cmsimplexh/plugins/boilerplate && phive --no-progress install --trust-gpg-keys 51C67305FFC2E5C0,A978220305CD5C32,D5F0CB76E2DD74F8
       - name: composer install
         run: cd cmsimplexh/plugins/boilerplate && composer install
       - name: phing sniff
