--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: cmsimplexh/plugins/boilerplate
+      - name: Cache tools
+        id: cache-tools
+        uses: actions/cache@v4
+        with:
+          path: cmsimplexh/plugins/boilerplate/tools
+          key: tools-${{matrix.version}}-${{hashFiles('cmsimplexh/plugins/boilerplate/.phive')}}
       - name: phive install
         run: cd cmsimplexh/plugins/boilerplate && phive --no-progress install --trust-gpg-keys 51C67305FFC2E5C0,A978220305CD5C32,D5F0CB76E2DD74F8
       - name: composer install
