--- a/build.xml
+++ b/build.xml
@@ -80,7 +80,6 @@
     </target>
 
     <target name="build" description="builds a distributable ZIP archive">
-        <fail unless="version" message="version is not defined!"/>
         <exec executable="git" checkreturn="true">
             <arg line="archive -o export.zip HEAD"/>
         </exec>
@@ -106,7 +105,7 @@
         <delete dir="export"/>
         <!-- <copy file="dist/config/config.php" tofile="dist/config/defaultconfig.php"/> -->
         <copy file="dist/languages/en.php" tofile="dist/languages/default.php"/>
-        <zip destfile="Boilerplate_XH-${version}.zip" basedir="dist" prefix="boilerplate/"/>
+        <zip destfile="Boilerplate_XH-2.1-dev.zip" basedir="dist" prefix="boilerplate/"/>
         <delete dir="dist"/>
     </target>
 
