Actually use CI cache

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,8 @@ jobs:
         with:
           path: cmsimplexh/plugins/boilerplate/tools
           key: tools-${{hashFiles('cmsimplexh/plugins/boilerplate/.phive')}}
-      - name: phive install
+      - if: ${{steps.cache-tools.outputs.cache-hit != 'true'}}
+        name: phive install
         run: cd cmsimplexh/plugins/boilerplate && phive --no-progress install --trust-gpg-keys 51C67305FFC2E5C0,A978220305CD5C32,D5F0CB76E2DD74F8
       - name: composer install
         run: cd cmsimplexh/plugins/boilerplate && composer install
