--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,10 @@
 name: checks
-on: [push, pull_request, workflow_dispatch]
+on:
+  pull_request:
+  push:
+  schedule:
+    - cron: '09 20 * * *'
+  workflow_dispatch:
 jobs:
   checks:
     strategy:
