Use same configuration for tests and coverage

--- a/build.xml
+++ b/build.xml
@@ -27,18 +27,14 @@
   </target>
 
   <target name="test" description="runs all unit tests">
-    <exec executable="phpunit" passthru="true" checkreturn="true">
-      <arg value="--bootstrap"/>
-      <arg file="tests/bootstrap.php"/>
-      <arg file="tests"/>
-    </exec>
+    <exec executable="phpunit" passthru="true" checkreturn="true"/>
   </target>
 
   <target name="check" description="runs all checks" depends="sniff,stan,test"/>
 
   <target name="coverage" description="generates coverage report">
     <exec executable="phpunit" passthru="true" checkreturn="true">
-      <arg line="--configuration coverage.xml"/>
+      <arg line="--coverage-html coverage"/>
     </exec>
   </target>
 
